--- a/biblio.bib
+++ b/biblio.bib
@@ -145,6 +145,22 @@
   number  = {Power MOSFET}
 }
 
+@manual{2n3904,
+  organization = {OnSemi},
+  title        = {2N3903, 2N3904},
+  year         = {2021},
+  url          = {https://www.onsemi.com/pdf/datasheet/2n3903-d.pdf},
+  number       = {NPN Silicon - General Purpose Transistors}
+}
+
+@manual{2n3906,
+  organization = {OnSemi},
+  title        = {2N3906},
+  year         = {2010},
+  url          = {https://www.onsemi.com/pdf/datasheet/2n3906-d.pdf},
+  number       = {PNP Silicon - General Purpose Transistors}
+}
+
 @misc{skin,
   author = "{Wikipedia contributors}",
   title = "Skin effect --- {Wikipedia}{,} The Free Encyclopedia",
@@ -166,3 +182,4 @@
   title        = {Diseño muy básico de Inductores y Transformadores},
   year         = {2022}
 }
+
