--- a/sections/diseño.tex
+++ b/sections/diseño.tex
@@ -501,7 +501,8 @@ $$ N_{2}=N_{1}=9 $$
 
 \subsection{Etapa de ganancia de corriente}
 
-La selección de transistores se realizó en base a la disponibilidad de los mismos en el laboratorio. Se utilizó el par de transistores 2N3904 (NPN) y 2N3906 (PNP). Sus características principales son:
+La selección de transistores se realizó en base a la disponibilidad de los mismos en el laboratorio.
+Se utilizó el par complementario 2N3904 (NPN)\cite{2n3904} y 2N3906 (PNP)\cite{2n3906}. Sus características principales son:
 
 \begin{itemize}
     \item Tensión de saturación colector-emisor: $V_{CEmax}=0.3V$
