--- a/sections/simulaciones_prototipo.tex
+++ b/sections/simulaciones_prototipo.tex
@@ -513,7 +513,7 @@ En las figuras \ref{fig:osc:15} y \ref{fig:osc:17} se muestra la corriente por e
 
 Las figuras \ref{fig:osc:38} y \ref{fig:osc:40} muestran las tensiones en el primario y el secundario del transformador de potencia. 
 En comparación con la simulación de la figura \ref{fig:sim:19}, la oscilación de $f_{osc}=1.25MHz$ deforma la tensión en el primario cuando la misma toma amplitud negativa y nula, y la amplitud de la señal coincide de forma aproximada.
-Al comparar con la forma de onda del secundario de la figura \ref{fig:sim:20}, se observa una nueva oscilación de $f_{osc}=3.23MHz$ mucho más marcada que la anterior y, a pesar de utilizar una relación 1:1, una gran disminución de la tensión de $36V$ a $20V$. 
+Al comparar con la forma de onda del secundario de la figura \ref{fig:sim:20}, se observa una nueva oscilación de $f_{osc}=3.23MHz$ mucho más marcada que la anterior y, a pesar de utilizar una relación 1:1, una gran disminución de la tensión de $\pm36V$ a $\pm20V$. 
 
 \begin{figure}[H]
     \centering
